# CatPuppetBridge

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  README.txt  SECURITY.md  catbridge.ini.default  catpuppetbridge.service  main.py  pyproject.toml  test_discord.py  test_irc.py  test_irc_connection.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: lint.yml  release.yml  tests.yaml  tests_python3-10.yaml  tests_python3-11.yaml  tests_python3-12.yaml  tests_python3-13.yaml  tests_python3-14.yaml  tests_python3-15.yaml
debian/: catpuppetbridge.service  changelog  control  copyright  install  postinst  rules
debian/source/: options
modules/: AddressGenerator.py  DiscordBridge.py  IRCBridge.py  address_generator.py  discord_bridge.py  irc_bridge.py
requirements/: dev-requirements.txt  prod-requirements.txt  prod.txt
src/: main.py  test_discord.py  test_irc.py  test_irc_connection.py
src/modules/: address_generator.py  discord_bridge.py  discord_filters.py  irc_bridge.py  stats_data.py
src/tests/: server.crt  server.key
