[project]
name = "catpuppetbridge_e-lisa"
version = "1.1.3"
authors = [
  { name="Lisa Marie Maginnis", email="me@lisamarie.pro" },
]
description = "A modern bridge from IRC to Discord which uses 'puppets' (fake IRC Users controlled by the bridge) to make integration between IRC and Discord more seamless."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-only"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/hypatia-software-org/CatPuppetBridge"
Issues = "https://github.com/hypatia-software-org/CatPuppetBridge/issues"